Port from Chicken 4 to 5

--- a/readme.org
+++ b/readme.org
@@ -527,6 +527,7 @@ Think of it as a shortcut to using pass without all the cruft, or flexibility.
 
 | Version | Notes |
 |---------+-------|
+|     5.0 | Ported to Chicken 5 |
 |     4.1 | Fixed #7, updated readme.org |
 |     4.0 | Dropped Exception and CPS, as they did not work under basic tests; removed do keyword, fixed Writer monad |
 |     3.3 | Total rewrite, no API changes |
@@ -553,8 +554,9 @@ Original Egg By Daniel J. Leslie
 dan@ironoxide.ca
 
 Additional Contributors:
-Cameron Swords.
+Cameron Swords
 Peter Bex
+Alice Maz
 
 * License
 
